<resources>

    <string name="app_name">MyMall</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_you_password">Enter you Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="have_an_account_sing_in">Have an account? Sing in!</string>
    <string name="enter_you_email">Enter You Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="sing_in">Sing In</string>
    <string name="don_t_have_an_account_sing_up">Don\'t have an account? Sing up!</string>
    <string name="go_back"><![CDATA[< << Go Back]]></string>
    <string name="check_your_inbox_after_clicking_the_button">Check Your Inbox after clicking the Button</string>
    <string name="enter_your_register_email">Enter Your Register Email</string>
    <string name="don_t_worry_we_just_need_your_registerd_email_address_and_it_s_done">Don\'t worry, we just need your registerd email address and it\'s done!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_passoword">Reset Passoword</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name </string>
    <string name="nav_header_subtitle">User@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>

</resources>